docs.kosli.com/content/legacy_ref/v2.6.15/kosli_list_flows.md
---
title: "kosli list flows"
beta: false
---

# kosli list flows

## Synopsis

List flows for an org.

```shell
kosli list flows [flags]
```

## Flags
| Flag | Description |
| :--- | :--- |
|    -h, --help  |  help for flows  |
|    -o, --output string  |  [defaulted] The format of the output. Valid formats are: [table, json]. (default "table")  |


## Options inherited from parent commands
| Flag | Description |
| :--- | :--- |
|    -a, --api-token string  |  The Kosli API token.  |
|    -c, --config-file string  |  [optional] The Kosli config file path. (default "kosli")  |
|        --debug  |  [optional] Print debug logs to stdout. A boolean flag https://docs.kosli.com/faq/#boolean-flags (default false)  |
|    -H, --host string  |  [defaulted] The Kosli endpoint. (default "https://app.kosli.com")  |
|    -r, --max-api-retries int  |  [defaulted] How many times should API calls be retried when the API host is not reachable. (default 3)  |
|        --org string  |  The Kosli organization.  |


