docs.kosli.com/content/legacy_ref/v2.10.7/kosli_list_flows.md
---
title: "kosli list flows"
beta: false
deprecated: false
---

# kosli list flows

## Synopsis

List flows for an org.

```shell
kosli list flows [flags]
```

## Flags
| Flag | Description |
| :--- | :--- |
|    -h, --help  |  help for flows  |
|    -o, --output string  |  [defaulted] The format of the output. Valid formats are: [table, json]. (default "table")  |


## Flags inherited from parent commands
| Flag | Description |
| :--- | :--- |
|    -a, --api-token string  |  The Kosli API token.  |
|    -c, --config-file string  |  [optional] The Kosli config file path. (default "kosli")  |
|        --debug  |  [optional] Print debug logs to stdout. A boolean flag https://docs.kosli.com/faq/#boolean-flags (default false)  |
|    -H, --host string  |  [defaulted] The Kosli endpoint. (default "https://app.kosli.com")  |
|        --http-proxy string  |  [optional] The HTTP proxy URL including protocol and port number. e.g. 'http://proxy-server-ip:proxy-port'  |
|    -r, --max-api-retries int  |  [defaulted] How many times should API calls be retried when the API host is not reachable. (default 3)  |
|        --org string  |  The Kosli organization.  |


## Live Example

{{< raw-html >}}<pre>export KOSLI_ORG=cyber-dojo
export KOSLI_API_TOKEN=Pj_XT2deaVA6V1qrTlthuaWsmjVt4eaHQwqnwqjRO3A  # read-only
<a href="https://app.kosli.com/api/v2/livedocs/cyber-dojo/cli?command=kosli+list+flows+--output=json">kosli list flows --output=json</a></pre>{{< / raw-html >}}

